<resources>
    <string name="app_name">AodaiShoppingList</string>
    <string name="title_activity_main_list">MainListActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="amount">Amount to get</string>
    <string name="save">Save Item</string>
    <string name="units">Units to get</string>
    <string name="price">Price of item</string>
    <string name="name">Item name</string>
    <string name="total">price</string>
    <string name="Count">count</string>
</resources>
